--- a/zeta/data/metadata/analytics.ipynb
+++ b/zeta/data/metadata/analytics.ipynb
@@ -81,8 +81,11 @@
     "counts = [counters[year] for year in unique_years]\n",
     "plt.bar(unique_years, counts, label=\"Total\")\n",
     "plt.show()\n",
-    "for year in range(1950, 2023):\n",
-    "  print(f\"[{year} = {counters.get(year, 0)}]\", end=\" \")"
+    "with open(\"counts.csv\", \"w\") as f:\n",
+    "  for year in range(1950, 2023):\n",
+    "    count = counters.get(year, 0)\n",
+    "    print(f\"[{year} = {count}]\", end=\" \")\n",
+    "    f.write(f\"{year},{count}\\n\")"
    ]
   },
   {
